k8s/petclinic-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-petclinic
spec:
  selector:
    app: spring-petclinic
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: LoadBalancer  # LoadBalancer 타입 추가
